--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-appserver-key
-dbserver-key
-*.pub
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
+
+# Deployment files (kept in deployment branch only)
+buildspec.yml
+appspec.yml
+docker-compose.yml
+Dockerfile
+/scripts/
