--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,27 @@
 .git
 .gitignore
 .env
-.env.backup
+.env.*
+!.env.example
 node_modules
 vendor
 storage/logs/*
-storage/framework/cache/*
+!storage/logs/.gitignore
+storage/framework/cache/data/*
+!storage/framework/cache/data/.gitignore
 storage/framework/sessions/*
+!storage/framework/sessions/.gitignore
 storage/framework/views/*
+!storage/framework/views/.gitignore
 bootstrap/cache/*
+!bootstrap/cache/.gitignore
 .idea
 .vscode
+.DS_Store
 *.log
 *.md
-README.md
+tests
 .editorconfig
 .phpunit.result.cache
+phpunit.xml
+Thumbs.db
