--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
 services:
   php-fpm:
-    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/tailadmin-laravel:latest
+    image: 263751300136.dkr.ecr.us-east-1.amazonaws.com/tailadmin-laravel:latest
     container_name: tailadmin-php-fpm
     restart: unless-stopped
     working_dir: /var/www/html
-    volumes:
-      - /var/www/tailadmin-laravel:/var/www/html
-      - /var/www/html/vendor
     ports:
       - "9000:9000"
     networks:
