--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,14 +32,21 @@ phases:
 
   post_build:
     commands:
-      - echo "======================================"
-      - echo "📤 Pushing Docker images to ECR..."
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo "✅ Docker images pushed successfully"
-
-      - echo "======================================"
       - echo "📡 Triggering EC2 deployment..."
-      - ssh -i /tmp/deploy_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "IMAGE_TAG=$IMAGE_TAG bash -s" < $DEPLOY_SCRIPT
-      - echo "✅ EC2 deployment triggered successfully"
+      - |
+        ssh -i /tmp/deploy_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+        set -ex
+        echo "Logging into ECR..."
+        aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 263751300136.dkr.ecr.us-east-1.amazonaws.com
+        echo "Pulling latest image..."
+        docker pull 263751300136.dkr.ecr.us-east-1.amazonaws.com/tailadmin-laravel:$IMAGE_TAG
+        echo "Stopping old container..."
+        docker stop tailadmin-php-fpm || true
+        docker rm tailadmin-php-fpm || true
+        echo "Starting new container..."
+        docker run -d --name tailadmin-php-fpm -p 9000:9000 --env-file /var/www/tailadmin-laravel/.env \
+        263751300136.dkr.ecr.us-east-1.amazonaws.com/tailadmin-laravel:$IMAGE_TAG
+        echo "Deployment complete!"
+        docker ps
+        EOF 
 
