--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,10 @@
 version: 0.2
-
 env:
   variables:
     AWS_DEFAULT_REGION: us-east-1
     EC2_USER: ubuntu
     EC2_HOST: 34.234.103.82
     SECRET_ARN: arn:aws:secretsmanager:us-east-1:263751300136:secret:tailadmin/ec2-deploy-key-ubuntu-3uWCmM
-
 phases:
   pre_build:
     commands:
@@ -14,24 +12,21 @@ phases:
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 263751300136.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - REPOSITORY_URI=263751300136.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/tailadmin-laravel
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
-      - echo "Pre-build done. Image tag: $IMAGE_TAG"
-
+      - IMAGE_TAG="${COMMIT_HASH:-latest}"
+      - echo "Pre-build done. Image tag:$IMAGE_TAG"
   build:
     commands:
       - echo "Building Docker image..."
       - docker build --no-cache -t $REPOSITORY_URI:latest .
       - echo "Tagging Docker image..."
-      - docker tag "$REPOSITORY_URI:latest" "$REPOSITORY_URI:$IMAGE_TAG"
-
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo "Pushing Docker images..."
-      - docker push "$REPOSITORY_URI:latest"
-      - docker push "$REPOSITORY_URI:$IMAGE_TAG"
+      - docker push $REPOSITORY_URI:latest
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo "Fetching EC2 deploy key from Secrets Manager..."
       - aws secretsmanager get-secret-value --secret-id $SECRET_ARN --query SecretString --output text > /tmp/deploy_key.pem
       - chmod 600 /tmp/deploy_key.pem
       - echo "Triggering deploy on EC2..."
       - ssh -i /tmp/deploy_key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST "IMAGE_TAG=$IMAGE_TAG bash -s" < ./deploy.sh
-
